# gloopsplat

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  collider.h  grid.h  kernel.h  particle.h  renderer.h  scene.h  shader.h  skybox.h  solver.h  splatRenderer.h  static_grid.h
include/glad/: glad.h
shaders/: skybox.fs  skybox.vs  splat.fs  splat.vs
src/: glad.c  main.cpp  renderer.cpp  shader.cpp  solver.cpp  splatRenderer.cpp  static_grid.cpp
